--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -5,9 +5,12 @@
       "at-rule-no-unknown": [
         true,
         {
-          "ignoreAtRules": ["tailwind", "apply", "variants", "responsive", "screen"]
+          "ignoreAtRules": ["tailwind", "apply", "variants", "responsive", "screen" ]
         }
       ],
+      "font-family-no-missing-generic-family-keyword":  [true, 
+      { "ignoreFontFamilies": ["Quicksand"] }
+    ],
       "scss/at-rule-no-unknown":  [
         true,
         {
